[tool.poetry]
name = "crantpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU Public License v3.0"
readme = "README.md"
packages = [{include = "crantpy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
caveclient = "^7.7.1"
seatable-api = "^3.0.0"
navis = {extras = ["all"], version = "^1.10.0"}
mkinit = "^1.1.0"
lazy-loader = "^0.4"
pcg-skel = "^1.3.1"
cloud-volume = "^12.2.0"
neuroglancer = "^2.40.1"
nglui = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
python_paths = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
