[tool.poetry]
name = "crantpy"
version = "0.0.0"
description = "Python Access to the Clonal Raider ANT (CRANT) Brain Datasets"
authors = ["CRANTb Community <crantb@example.com>"]
license = "GNU Public License v3.0"
readme = "README.md"
homepage = "https://github.com/Social-Evolution-and-Behavior/crantpy"
repository = "https://github.com/Social-Evolution-and-Behavior/crantpy"
documentation = "https://social-evolution-and-behavior.github.io/crantpy/"
keywords = ["neuroscience", "connectomics", "ant", "brain", "CAVE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "crantpy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
caveclient = "^7.7.1"
seatable-api = "^3.0.0"
navis = {extras = ["all"], version = "^1.10.0"}
mkinit = "^1.1.0"
lazy-loader = "^0.4"
pcg-skel = "^1.3.1"
cloud-volume = "^12.2.0"
neuroglancer = "^2.40.1"
nglui = "^3.8.2"
scipy = "^1.11.0"
skeletor = "^1.0.0"
trimesh = "^4.0.0"
tqdm = "^4.66.0"
pytest-cov = "^6.1.1"
diskcache = "^5.6.3"
gdata = "^2.0.18"
pandas = "^2.3.3"
scikit-learn = ">=1.5.0,<1.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter-book = "^1.0.4.post1"
ghp-import = "^2.1.0"
sphinx-rtd-theme = "^3.0.2"
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
twine = "^5.0.0"

[tool.pytest.ini_options]
python_paths = ["src"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
