[tool.poetry]
name = "crantpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU Public License v3.0"
readme = "README.md"
packages = [{include = "crantpy", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
caveclient = "^7.7.1"
seatable-api = "^3.0.0"
navis = {extras = ["all"], version = "^1.10.0"}
mkinit = "^1.1.0"
lazy-loader = "^0.4"
pcg-skel = "^1.3.1"
cloud-volume = "^12.2.0"
neuroglancer = "^2.40.1"
nglui = "^3.8.2"
scipy = "^1.11.0"
skeletor = "^1.0.0"
trimesh = "^4.0.0"
tqdm = "^4.66.0"
pytest-cov = "^6.1.1"
diskcache = "^5.6.3"
gdata = "^2.0.18"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
neuroglancer-scripts = "^1.2.0"
pyvista = "^0.46.3"
trame = "^3.12.0"
vtk = "^9.5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
python_paths = ["src"]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
